# proto/config_service_grpc.pb.go
@@ -25,6 +25,8 @@ type ConfigServiceClient interface {
 	UpdateConfig(ctx context.Context, in *UpdateConfigRequest, opts ...grpc.CallOption) (*Config, error)
 	PatchUpdateConfig(ctx context.Context, in *PatchUpdateConfigRequest, opts ...grpc.CallOption) (*Config, error)
 	InsertConfig(ctx context.Context, in *InsertConfigRequest, opts ...grpc.CallOption) (*Config, error)
+	DeleteConfig(ctx context.Context, in *DeleteConfigRequest, opts ...grpc.CallOption) (*Empty, error)
+	DeleteConfigs(ctx context.Context, in *DeleteConfigsRequest, opts ...grpc.CallOption) (*Empty, error)
 	GetConfigByObjectId(ctx context.Context, in *GetConfigByObjectIdRequest, opts ...grpc.CallOption) (*Config, error)
 	GetConfigById(ctx context.Context, in *GetConfigByIdRequest, opts ...grpc.CallOption) (*Config, error)
 	GetAllConfigs(ctx context.Context, in *GetAllConfigsRequest, opts ...grpc.CallOption) (*Configs, error)
@@ -40,7 +42,7 @@ func NewConfigServiceClient(cc grpc.ClientConnInterface) ConfigServiceClient {
 
 func (c *configServiceClient) UpdateConfig(ctx context.Context, in *UpdateConfigRequest, opts ...grpc.CallOption) (*Config, error) {
 	out := new(Config)
-	err := c.cc.Invoke(ctx, "/webitel_logger.ConfigService/UpdateConfig", in, out, opts...)
+	err := c.cc.Invoke(ctx, "/logger.ConfigService/UpdateConfig", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -49,7 +51,7 @@ func (c *configServiceClient) UpdateConfig(ctx context.Context, in *UpdateConfig
 
 func (c *configServiceClient) PatchUpdateConfig(ctx context.Context, in *PatchUpdateConfigRequest, opts ...grpc.CallOption) (*Config, error) {
 	out := new(Config)
-	err := c.cc.Invoke(ctx, "/webitel_logger.ConfigService/PatchUpdateConfig", in, out, opts...)
+	err := c.cc.Invoke(ctx, "/logger.ConfigService/PatchUpdateConfig", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -58,7 +60,25 @@ func (c *configServiceClient) PatchUpdateConfig(ctx context.Context, in *PatchUp
 
 func (c *configServiceClient) InsertConfig(ctx context.Context, in *InsertConfigRequest, opts ...grpc.CallOption) (*Config, error) {
 	out := new(Config)
-	err := c.cc.Invoke(ctx, "/webitel_logger.ConfigService/InsertConfig", in, out, opts...)
+	err := c.cc.Invoke(ctx, "/logger.ConfigService/InsertConfig", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *configServiceClient) DeleteConfig(ctx context.Context, in *DeleteConfigRequest, opts ...grpc.CallOption) (*Empty, error) {
+	out := new(Empty)
+	err := c.cc.Invoke(ctx, "/logger.ConfigService/DeleteConfig", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *configServiceClient) DeleteConfigs(ctx context.Context, in *DeleteConfigsRequest, opts ...grpc.CallOption) (*Empty, error) {
+	out := new(Empty)
+	err := c.cc.Invoke(ctx, "/logger.ConfigService/DeleteConfigs", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -67,7 +87,7 @@ func (c *configServiceClient) InsertConfig(ctx context.Context, in *InsertConfig
 
 func (c *configServiceClient) GetConfigByObjectId(ctx context.Context, in *GetConfigByObjectIdRequest, opts ...grpc.CallOption) (*Config, error) {
 	out := new(Config)
-	err := c.cc.Invoke(ctx, "/webitel_logger.ConfigService/GetConfigByObjectId", in, out, opts...)
+	err := c.cc.Invoke(ctx, "/logger.ConfigService/GetConfigByObjectId", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -76,7 +96,7 @@ func (c *configServiceClient) GetConfigByObjectId(ctx context.Context, in *GetCo
 
 func (c *configServiceClient) GetConfigById(ctx context.Context, in *GetConfigByIdRequest, opts ...grpc.CallOption) (*Config, error) {
 	out := new(Config)
-	err := c.cc.Invoke(ctx, "/webitel_logger.ConfigService/GetConfigById", in, out, opts...)
+	err := c.cc.Invoke(ctx, "/logger.ConfigService/GetConfigById", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -85,7 +105,7 @@ func (c *configServiceClient) GetConfigById(ctx context.Context, in *GetConfigBy
 
 func (c *configServiceClient) GetAllConfigs(ctx context.Context, in *GetAllConfigsRequest, opts ...grpc.CallOption) (*Configs, error) {
 	out := new(Configs)
-	err := c.cc.Invoke(ctx, "/webitel_logger.ConfigService/GetAllConfigs", in, out, opts...)
+	err := c.cc.Invoke(ctx, "/logger.ConfigService/GetAllConfigs", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -99,6 +119,8 @@ type ConfigServiceServer interface {
 	UpdateConfig(context.Context, *UpdateConfigRequest) (*Config, error)
 	PatchUpdateConfig(context.Context, *PatchUpdateConfigRequest) (*Config, error)
 	InsertConfig(context.Context, *InsertConfigRequest) (*Config, error)
+	DeleteConfig(context.Context, *DeleteConfigRequest) (*Empty, error)
+	DeleteConfigs(context.Context, *DeleteConfigsRequest) (*Empty, error)
 	GetConfigByObjectId(context.Context, *GetConfigByObjectIdRequest) (*Config, error)
 	GetConfigById(context.Context, *GetConfigByIdRequest) (*Config, error)
 	GetAllConfigs(context.Context, *GetAllConfigsRequest) (*Configs, error)
@@ -117,6 +139,12 @@ func (UnimplementedConfigServiceServer) PatchUpdateConfig(context.Context, *Patc
 }
 func (UnimplementedConfigServiceServer) InsertConfig(context.Context, *InsertConfigRequest) (*Config, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method InsertConfig not implemented")
+}
+func (UnimplementedConfigServiceServer) DeleteConfig(context.Context, *DeleteConfigRequest) (*Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method DeleteConfig not implemented")
+}
+func (UnimplementedConfigServiceServer) DeleteConfigs(context.Context, *DeleteConfigsRequest) (*Empty, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method DeleteConfigs not implemented")
 }
 func (UnimplementedConfigServiceServer) GetConfigByObjectId(context.Context, *GetConfigByObjectIdRequest) (*Config, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetConfigByObjectId not implemented")
@@ -150,7 +178,7 @@ func _ConfigService_UpdateConfig_Handler(srv interface{}, ctx context.Context, d
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/webitel_logger.ConfigService/UpdateConfig",
+		FullMethod: "/logger.ConfigService/UpdateConfig",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(ConfigServiceServer).UpdateConfig(ctx, req.(*UpdateConfigRequest))
@@ -168,7 +196,7 @@ func _ConfigService_PatchUpdateConfig_Handler(srv interface{}, ctx context.Conte
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/webitel_logger.ConfigService/PatchUpdateConfig",
+		FullMethod: "/logger.ConfigService/PatchUpdateConfig",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(ConfigServiceServer).PatchUpdateConfig(ctx, req.(*PatchUpdateConfigRequest))
@@ -186,10 +214,46 @@ func _ConfigService_InsertConfig_Handler(srv interface{}, ctx context.Context, d
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/webitel_logger.ConfigService/InsertConfig",
+		FullMethod: "/logger.ConfigService/InsertConfig",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(ConfigServiceServer).InsertConfig(ctx, req.(*InsertConfigRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ConfigService_DeleteConfig_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DeleteConfigRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ConfigServiceServer).DeleteConfig(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/logger.ConfigService/DeleteConfig",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ConfigServiceServer).DeleteConfig(ctx, req.(*DeleteConfigRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ConfigService_DeleteConfigs_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DeleteConfigsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ConfigServiceServer).DeleteConfigs(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/logger.ConfigService/DeleteConfigs",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ConfigServiceServer).DeleteConfigs(ctx, req.(*DeleteConfigsRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -204,7 +268,7 @@ func _ConfigService_GetConfigByObjectId_Handler(srv interface{}, ctx context.Con
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/webitel_logger.ConfigService/GetConfigByObjectId",
+		FullMethod: "/logger.ConfigService/GetConfigByObjectId",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(ConfigServiceServer).GetConfigByObjectId(ctx, req.(*GetConfigByObjectIdRequest))
@@ -222,7 +286,7 @@ func _ConfigService_GetConfigById_Handler(srv interface{}, ctx context.Context, 
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/webitel_logger.ConfigService/GetConfigById",
+		FullMethod: "/logger.ConfigService/GetConfigById",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(ConfigServiceServer).GetConfigById(ctx, req.(*GetConfigByIdRequest))
@@ -240,7 +304,7 @@ func _ConfigService_GetAllConfigs_Handler(srv interface{}, ctx context.Context, 
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/webitel_logger.ConfigService/GetAllConfigs",
+		FullMethod: "/logger.ConfigService/GetAllConfigs",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(ConfigServiceServer).GetAllConfigs(ctx, req.(*GetAllConfigsRequest))
@@ -252,7 +316,7 @@ func _ConfigService_GetAllConfigs_Handler(srv interface{}, ctx context.Context, 
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
 var ConfigService_ServiceDesc = grpc.ServiceDesc{
-	ServiceName: "webitel_logger.ConfigService",
+	ServiceName: "logger.ConfigService",
 	HandlerType: (*ConfigServiceServer)(nil),
 	Methods: []grpc.MethodDesc{
 		{
@@ -266,6 +330,14 @@ var ConfigService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "InsertConfig",
 			Handler:    _ConfigService_InsertConfig_Handler,
+		},
+		{
+			MethodName: "DeleteConfig",
+			Handler:    _ConfigService_DeleteConfig_Handler,
+		},
+		{
+			MethodName: "DeleteConfigs",
+			Handler:    _ConfigService_DeleteConfigs_Handler,
 		},
 		{
 			MethodName: "GetConfigByObjectId",
